--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">NyTimesSample</string>
+    <string name="ok">Ok</string>
+    <string name="error_message_email">Incorrect email</string>
+    <string name="error_message_password">Weak password: must be at least 8 characters with one uppercase letter and one number</string>
+    <string name="error_message_full_name">Invalid full name</string>
+    <string name="error_message_phone_number">Invalid phone number</string>
+    <string name="error_message_date_of_birth">Invalid date format use (DD/MM/YYYY)</string>
+    <string name="error_message_national_id">Invalid national ID</string>
 </resources>
