--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="error_message_phone_number">Invalid phone number</string>
     <string name="error_message_date_of_birth">Invalid date format use (DD/MM/YYYY)</string>
     <string name="error_message_national_id">Invalid national ID</string>
+    <string name="general_error">Something went wrong!</string>
 </resources>
