--- a/core/src/main/res/values-ar/strings.xml
+++ b/core/src/main/res/values-ar/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">NyTimesSample</string>
-    <string name="ok">حسنا</string>
-    <string name="error_message_email">بريد إلكتروني غير صحيح</string>
-    <string name="error_message_password">كلمة مرور ضعيفة: يجب أن تحتوي على 8 أحرف على الأقل بحرف كبير واحد ورقم واحد</string>
-    <string name="error_message_full_name">اسم كامل غير صالح</string>
-    <string name="error_message_phone_number">رقم هاتف غير صالح</string>
-    <string name="error_message_date_of_birth">تنسيق تاريخ غير صالح، استخدم (يوم/شهر/سنة)</string>
-    <string name="error_message_national_id">رقم هوية وطنية غير صالح</string>
+    <string name="ok">موافق</string>
+    <string name="error_message_email">البريد الإلكتروني غير صحيح</string>
+    <string name="error_message_password">كلمة المرور ضعيفة: يجب أن تحتوي على ما لا يقل عن 8 أحرف بما في ذلك حرف كبير واحد ورقم واحد</string>
+    <string name="error_message_full_name">اسم غير صحيح (مثال: سامي شورمان)</string>
+    <string name="error_message_phone_number">رقم هاتف غير صحيح: يجب أن يبدأ بـ 78 أو 77 أو 79</string>
+    <string name="error_message_date_of_birth">تنسيق تاريخ غير صحيح، استخدم (يوم/شهر/سنة)</string>
+    <string name="error_message_national_id">رقم الهوية الوطنية غير صحيح</string>
     <string name="general_error">حدث خطأ ما!</string>
 </resources>
